# glack

./: glack.in  meson.build
data/: com.gitlab.lnovsak.Glack.appdata.xml.in  com.gitlab.lnovsak.Glack.desktop.in  com.gitlab.lnovsak.Glack.gschema.xml  glack.gresource.xml  meson.build
data/css/: application.css  channel.css  channel_sidebar.css  channel_sidebar_row.css  composer.css  join_channel_dialog.css  message.css  open_dm_dialog.css  sidebar.css  sidebar_row.css  user_card.css
data/ui/: channel.ui  channel_sidebar.ui  channel_sidebar_row.ui  composer.ui  join_channel_dialog.ui  message.ui  open_dm_dialog.ui  sidebar.ui  sidebar_row.ui  user_card.ui  window.ui
glack/: application.py  avatar_cache.py  emoji_loader.py  mrkdwn.py  rtm_handler.py  slack.py  url_preview.py  window.py  workspace.py
glack/models/: avatar.py  channel.py  emoji.py  message.py  user.py
glack/widgets/: channel.py  channel_sidebar.py  channel_sidebar_row.py  composer.py  join_channel_dialog.py  message.py  open_dm_dialog.py  sidebar.py  sidebar_row.py  user_card.py
po/: POTFILES  meson.build
